--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Happy Birthday</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" type="image/x-icon" href="Happy%20Birthday_files/cake.svg">
 
     <link rel="stylesheet" href="Happy%20Birthday_files/bootstrap.css">
     <link rel="stylesheet" href="Happy%20Birthday_files/style.css">
